--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.15",
-    "angular-material": "~0.11.4"
+    "angular-material": "~0.11.4",
+    "Chart.js": "~1.0.2",
+    "angular-chart.js": "~0.8.6"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
